# powerpmac

./: CMakeLists.external.txt  CMakeLists.txt  Makefile.multi  Makefile.multi.bck  MultiClassesFactory.cpp  PowerPMAC.multi.xmi  README.md  debugtango.py  executehelper.h  main.cpp  tangoutil.cpp  tangoutil.h  telnettest.py
PPMACTangoProject/: TangoPowerPMAC.PowerPmacSuite_sln
PPMACTangoProject/TangoPowerPMAC/: TangoPowerPMAC.ppproj
PPMACTangoProject/TangoPowerPMAC/C Language/Include/: pp_proj.h
PPMACTangoProject/TangoPowerPMAC/C Language/Realtime Routines/: usrcode.c  usrcode.h
PPMACTangoProject/TangoPowerPMAC/Configuration/: pp_custom_save.cfg  pp_custom_save.tpl  pp_disable.txt  pp_inc_startup.txt  pp_proj.ini  pp_save.cfg  pp_startup.txt  systemsetup.cfg
PPMACTangoProject/TangoPowerPMAC/Database/: pp_global.sym  pp_local.sym  pp_prog.sym  pp_subprog.sym
PPMACTangoProject/TangoPowerPMAC/PMAC Script Language/Global Includes/: tango.pmh
PPMACTangoProject/TangoPowerPMAC/PMAC Script Language/Libraries/: poweronresetsub.pmc  timersub.pmc
PPMACTangoProject/TangoPowerPMAC/PMAC Script Language/Motion Programs/: movetopos.pmc  zeromotors.pmc
PPMACTangoProject/TangoPowerPMAC/PMAC Script Language/PLC Programs/: 01-poweronreset.plc  02-axissetup.plc  03-inoutwrite.plc  04-matrixtest.plc
PPMACTangoProject/TangoPowerPMAC/Temp/: pp_debug.txt
axis_controller/: AxisController.cpp  AxisController.h  AxisController.xmi  AxisControllerClass.cpp  AxisControllerClass.h  AxisControllerStateMachine.cpp  ClassFactory.cpp  Makefile  main.cpp
bricklv_amp/: BrickLVAmp.cpp  BrickLVAmp.h  BrickLVAmp.xmi  BrickLVAmpClass.cpp  BrickLVAmpClass.h  BrickLVAmpStateMachine.cpp  ClassFactory.cpp  Makefile  main.cpp
catch2-master/single_include/catch2/: catch.hpp
fmt-5.3.0/include/fmt/: format.h
powerPMAC_ssh-master/: Makefile  powerPMACShell  testPowerPMACcontrolLib
powerPMAC_ssh-master/html/: _power_p_m_a_ccontrol_8cpp.html  _power_p_m_a_ccontrol_8cpp_source.html  _power_p_m_a_ccontrol_8h.html  _power_p_m_a_ccontrol_8h_source.html  annotated.html  arg_parser_8cpp.html  arg_parser_8cpp_source.html  arg_parser_8h.html  arg_parser_8h_source.html  class_power_p_m_a_ccontrol__ns_1_1_power_p_m_a_ccontrol-members.html  class_power_p_m_a_ccontrol__ns_1_1_power_p_m_a_ccontrol.html  classarg_parser-members.html  classarg_parser.html  classes.html  dir_17b975f38daff2d303702e2eb310c8fa.html  dir_215477aca72a0667d54c6ae1e2bd2b2d.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_7a4e12c5dcb2bdffb58410657123e1a3.html  dir_ef455ea3966550d872c037ef165fb567.html  dir_f03775be7048d77c9f09ff928ffd894f.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  menudata.js
powerPMAC_ssh-master/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js
powerpmac_compensationtable/: CMakeLists.txt  ClassFactory.cpp  Makefile  PowerPMAC_CompensationTable.cpp  PowerPMAC_CompensationTable.h  PowerPMAC_CompensationTable.xmi  PowerPMAC_CompensationTableClass.cpp  PowerPMAC_CompensationTableClass.h  PowerPMAC_CompensationTableStateMachine.cpp  main.cpp
powerpmac_coordinatesystems/: CMakeLists.txt  ClassFactory.cpp  Makefile  MyAttribute.cpp  MyAttribute.h  PowerPMAC_CoordinateSystems.cpp  PowerPMAC_CoordinateSystems.h  PowerPMAC_CoordinateSystems.xmi  PowerPMAC_CoordinateSystemsClass.cpp  PowerPMAC_CoordinateSystemsClass.h  PowerPMAC_CoordinateSystemsDynAttrUtils.cpp  PowerPMAC_CoordinateSystemsStateMachine.cpp  main.cpp
powerpmac_global/: CMakeLists.txt  ClassFactory.cpp  Makefile  PowerPMAC_Global.cpp  PowerPMAC_Global.h  PowerPMAC_Global.xmi  PowerPMAC_GlobalClass.cpp  PowerPMAC_GlobalClass.h  PowerPMAC_GlobalStateMachine.cpp  main.cpp
powerpmac_io/: CMakeLists.txt  ClassFactory.cpp  Makefile  PowerPMAC_IO.cpp  PowerPMAC_IO.h  PowerPMAC_IO.xmi  PowerPMAC_IOClass.cpp  PowerPMAC_IOClass.h  PowerPMAC_IOStateMachine.cpp  main.cpp
powerpmac_motor/: CMakeLists.txt  ClassFactory.cpp  Makefile  PowerPMAC_Motor.cpp  PowerPMAC_Motor.h  PowerPMAC_Motor.xmi  PowerPMAC_MotorClass.cpp  PowerPMAC_MotorClass.h  PowerPMAC_MotorStateMachine.cpp  main.cpp
powerpmac_plc/: CMakeLists.txt  ClassFactory.cpp  Makefile  PowerPMAC_PLC.cpp  PowerPMAC_PLC.h  PowerPMAC_PLC.xmi  PowerPMAC_PLCClass.cpp  PowerPMAC_PLCClass.h  PowerPMAC_PLCStateMachine.cpp  main.cpp
powerpmac_programs/: CMakeLists.txt  ClassFactory.cpp  Makefile  PowerPMAC_Programs.cpp  PowerPMAC_Programs.h  PowerPMAC_Programs.xmi  PowerPMAC_ProgramsClass.cpp  PowerPMAC_ProgramsClass.h  PowerPMAC_ProgramsStateMachine.cpp  main.cpp
ppmac_core/: CMakeLists.txt  commandbuilder.cpp  commandbuilder.h  commandquery.h  commands.txt  config.cpp  config.h  core.cpp  core.h  coreinterface.cpp  coreinterface.h  corenotifyinterface.h  events.h  eventsystem.h  exception.cpp  exception.h  genericdeleter.h  handletype.h  intervaltimer.h  locking.cpp  locking.h  main.cpp  pmacstateholder.h  ppmaccoreinterface.cpp  ppmaccoreinterface.h  receivebuffer.cpp  receivebuffer.h  remoteshell.cpp  remoteshell.h  resultparser.cpp  resultparser.h  scopedsignal.h  signalhandler.h  stateupdater.cpp  stateupdater.h  stopwatch.h  tangoutil.cpp  tangoutil.h  test-tests.cpp  test.cpp  (+10 more)
ppmac_core/eventsystem/: classid.h  event.h  eventbase.h  eventcache.h  eventconnection.h  eventconnectionbase.h  eventqueue.cpp  eventqueue.h  globaleventsystem.cpp  globaleventsystem.h  recursivecheck.h  scopedeventconnection.h  scopedeventhandler.h
ppmac_core/libs/: expected.hpp  scope_exit.h  sigs.h  span.hpp  unique_resource.h
ppmac_core/libs/detail/: scope_guard_base.h  wrapper.h
ppmac_core/pmac/: datastructures.cpp  datastructures.h  defines.cpp  defines.h  enumadapt.h  motorunitshort.h
scripts/: threadinitcall.py
spdlog-1.3.0/: CMakeLists.txt
wise_enum-master/: wise_enum_detail.h  wise_enum_generated.h
(+8 files in other folders)
